@@ -1249,6 +1249,11 @@ cairo_paint_with_alpha (cairo_t *cr,
 	return;
     }
 
+    if (CAIRO_ALPHA_IS_OPAQUE (alpha)) {
+	cairo_paint (cr);
+	return;
+    }
+
     _cairo_color_init_rgba (&color, 1., 1., 1., alpha);
     _cairo_pattern_init_solid (&pattern.solid, &color);
 
